force-app/main/default/objects/Logic_Expression_Line__mdt/Logic_Expression_Line__mdt.object-meta.xml
<CustomObject>
    <label>Logic Expression Line</label>
    <pluralLabel>Logic Expression Lines</pluralLabel>
</CustomObject>