force-app/main/default/objects/Logic_Expression_Line__mdt/fields/Expression__c.field-meta.xml
<CustomField>
    <fullName>Expression__c</fullName>
    <label>Expression</label>
    <referenceTo>Logic_Expression__mdt</referenceTo>
    <relationshipLabel>Logic Expression Lines</relationshipLabel>
    <relationshipName>Logic_Expression_Lines</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>