force-app/main/default/objects/Logic_Expression_Line__mdt/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <label>Field Type</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>