force-app/main/default/objects/Logic_Expression_Line__mdt/fields/Match_Case__c.field-meta.xml
<CustomField>
    <fullName>Match_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Match Case</label>
    <type>Checkbox</type>
</CustomField>