force-app/main/default/objects/Logic_Expression_Line__mdt/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
                <default>true</default>
                <label>Equals</label>
            </value>
            <value>
                <fullName>not_equal_to</fullName>
                <label>Not Equal To</label>
            </value>
            <value>
                <fullName>greater_than</fullName>
                <label>Greater Than</label>
            </value>
            <value>
                <fullName>greater_or_equal</fullName>
                <label>Greater or Equal</label>
            </value>
            <value>
                <fullName>less_than</fullName>
                <label>Less Than</label>
            </value>
            <value>
                <fullName>less_or_equal</fullName>
                <label>Less or Equal</label>
            </value>
            <value>
                <fullName>contains</fullName>
                <label>Contains</label>
            </value>
            <value>
                <fullName>does_not_contain</fullName>
                <label>Does Not Contain</label>
            </value>
            <value>
                <fullName>starts_with</fullName>
                <label>Starts With</label>
            </value>
            <value>
                <fullName>end_with</fullName>
                <label>Ends With</label>
            </value>
            <value>
                <fullName>Is True</fullName>
            </value>
            <value>
                <fullName>Is False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>