force-app/main/default/objects/Logic_Expression_Line__mdt/fields/Operator_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Operator_Pattern__c</fullName>
    <label>Operator Pattern</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>